# aries-ai-assistant-demo

./: .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: backend.Dockerfile  inter-prompt.txt  inter-prompt_korean.txt  pipeline_handler.py  pyproject.toml  server.py  system.txt  system_korean.txt
backend/bilingual_melo_tts/: BilingualMeloTTS.py  melo_tts_EN_openvino.xml  melo_tts_kr_openvino.xml
backend/bilingual_melo_tts/melo_tts/: convert_into_openvino.py  model_ov.py  openvino_test.py  processor.py
frontend/: frontend.Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Answer.tsx  AudioRecorder.tsx  ChatInput.tsx  Dialog.tsx  Greetings.tsx  Main.tsx  MobilintButton.tsx  MobilintIncPanel.tsx  MobilintModal.tsx  Sidebar.tsx  TTSButton.tsx  type.tsx
