[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyascii>=0.3.3",
    "cached-path>=1.7.3",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "fugashi>=1.5.1",
    "g2p-en>=2.1.0",
    "jamo>=0.4.1",
    "librosa>=0.11.0",
    "markdown>=3.8.2",
    "markdown-it-py>=3.0.0",
    "mblt-model-zoo[transformers]>=0.0.3.1",
    "mecab-python3>=1.0.10",
    "num2words>=0.5.14",
    "openvino>=2025.2.0",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pykakasi>=2.3.0",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.51.3",
    "unidic-lite>=1.0.8",
]

[tool.black]
line-length = 120
